[project]
name = "maptoposter"
version = "0.1.0"
description = "Transform your favorite cities into beautiful, minimalist map posters"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ankur", email = "ankur@example.com" }
]
keywords = ["maps", "poster", "openstreetmap", "osmnx", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "osmnx>=2.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "geopy>=2.4.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
web = [
    "streamlit>=1.31.0",
    "streamlit-folium>=0.18.0",
    "folium>=0.15.0",
]

[project.scripts]
maptoposter = "maptoposter.cli:main"

[project.urls]
Homepage = "https://github.com/originalankur/maptoposter"
Repository = "https://github.com/originalankur/maptoposter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maptoposter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
